--- a/Pipfile
+++ b/Pipfile
@@ -15,6 +15,7 @@ psycopg2 = "*"
 pika = "==1.1.0"
 python-dotenv = "*"
 markupsafe = "==2.0.1"
+flask-serialize = "*"
 
 [dev-packages]
 autopep8 = "*"
