rename main to app; setup for metadata;

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -4,7 +4,7 @@ services:
     build:
       context: .
       dockerfile: Dockerfile
-    command: 'python main.py'
+    command: 'python app.py'
     ports:
       - 8001:5000
     volumes:
